# supersearch10

./: CMakeLists.txt  DocumentParser.cpp  DocumentParser.h  avl_tree_map.h  avl_tree_tests.cpp  document.cpp  document.h  index_builder_test.cpp  inverted_index.cpp  inverted_index.h  main.cpp  query_processor.cpp  query_processor.h  search_engine.cpp  search_engine.h
